--- a/simple/style.css
+++ b/simple/style.css
@@ -35,7 +35,7 @@ nav ul {
   padding: 20px;
   width: 80%;
   background-color: #f1f1f1;
-  height: 700px; /* only for demonstration, should be removed */
+  height: 700px;
 }
 
 /* Clear floats after the columns */
